Fixed Alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -46,3 +46,11 @@
   background: #f1f1f1;
   border-radius: 10px;
 }
+.main-scroll-bar::-webkit-scrollbar {
+  width: 10px;
+}
+
+.main-scroll-bar::-webkit-scrollbar-track {
+  background: #f1f1f1;
+  border-radius: 10px;
+}
